--- a/game.project
+++ b/game.project
@@ -22,3 +22,7 @@ developer = Oscar Leif
 [input]
 game_binding = /input/game.input_bindingc
 
+[graphics]
+default_texture_min_filter = nearest
+default_texture_mag_filter = nearest
+
