--- a/game.project
+++ b/game.project
@@ -11,16 +11,20 @@ dynamic_orientation = 1
 display_device_info = 1
 
 [android]
-input_method = HiddenInputField
+input_method = KeyEvent
 display_cutout = 0
 immersive_mode = 1
+debuggable = 1
+extract_native_libs = 1
 
 [project]
 title = Flappy Bird Defold
 developer = Oscar Leif
+write_log = 1
 
 [input]
 game_binding = /input/game.input_bindingc
+use_accelerometer = 0
 
 [graphics]
 default_texture_min_filter = nearest
